Cleaned so much lint from the crack monkey's bellybutton that I am considering starting my own textile factory just so the sheer mass of fiber doesn't go to waste.
Yeah, it was that bad.

--- a/src/Makefile
+++ b/src/Makefile
@@ -63,8 +63,8 @@ update:
 
 ifdef IMC
 splint:
-	splint -showcolumn $(PROF) -DIMC -DIMCROM -DIMCEMBER *.c
+	splint -showcolumn $(PROF) -DIMC -DIMCROM -DIMCEMBER *.[ch]
 else
 splint:
-	splint -showcolumn -DLINUX *.c
+	splint -showcolumn $(PROF) *.c
 endif
