Create BinDir and BinExex config fields to determine the exec path for hotboots

--- a/bin/bucketmud.conf
+++ b/bin/bucketmud.conf
@@ -1,4 +1,5 @@
 [Paths]
+BinDir = "../bin"
 AreaDir = "../area"
 PlayerDir = "../player"
 PlayerTemp = "../player/temp"
@@ -14,6 +15,7 @@ ClassDir = "../classes/"
 ; All files are read in compltely at bootup.
 ; Most output files (bug, idea, typo, shutdown) are append-only
 [Files]
+BinExec = "bucketmud"
 AreaList = "area.lst"
 HelpFile = "help.are"
 MudProgs = "MudProgs.prg"
